# viewcube

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: documentation.yml  viewcube-python-publish.yml
config/: settings.py  strings.py
docs/: ViewCube.tex  cheatsheet.rst  conf.py  genindex.html  index.html  index.rst  intro.html  intro.rst  objects.inv  requirements.txt  search.html  sonicube.rst  usage.html  usage.rst
docs/_sources/: index.rst.txt  intro.rst.txt  usage.rst.txt
docs/html/: searchindex.js  sonicube.html
docs/html/_sources/: sonicube.rst.txt
evaluation/: README.md  ViewCube-Evaluation-Age.ipynb  ViewCube-Evaluation-BLV.ipynb  ViewCube-Evaluation-Combined.ipynb  ViewCube-Main_Evaluation.ipynb  ViewCube_Stats-BLV.csv  ViewCube_Stats-age.csv  ViewCube_Stats.csv  ViewCube_survey.csv
html/_sources/: index.rst.txt
latex/: ViewCube.tex
scripts/: ViewCube.py
sonicube/autoencoder/: keras_metadata.pb  saved_model.pb
sonicube/autoencoder/variables/: variables.index
sonicube/csound/: SoniCube.csd
viewcube/: README.md  __init__.py  config.py  cubeviewer.py  cubeviewer_old.py  main.py  qt_adapter.py  rgbmpl.py  setup.py  sonicube.py  utils.py  version.py  viewrss.py
views/: gui.py
